@@ -1,4 +1,7 @@
-
+2009-05-18 18:35
+	* : libxfpm/xfpm-notify Remove unused parameter to some functions.
+	* : xfpm-debug.h Check if the compiler supports variadic macros.
+	
 2009-05-17 13:34 Ali aliov@xfce.org 
 	 * : Fix a minor issue in the settings dialog
 
